--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .main {
   display: flex;
-
+  gap: 20px;
   justify-content: center;
   align-items: center;
   height: 680px;
@@ -44,8 +44,8 @@ form {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-#userInfo {
-  background-color: rgb(0, 0, 0, 0.7);
+#section {
+  padding-bottom: 10px;
 }
 .footer {
   color: white;
